--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
   <title>Clear View Escapes</title>
+  <link rel="stylesheet" href="">
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travel">
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
 </head>
@@ -14,7 +15,7 @@
     <nav>
       <ul>
         <li><a href="#our-beginning">Our Beginning</a></li>
-        <li><a href="#features">Features</a></li>
+        <li><a href="#features">Featareures</a></li>
         <li><a href="#testimonials">Testimonials</a></li>
       </ul>
     </nav>
